--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h2 {
+    @apply text-xl font-semibold my-8
+}
+
+button {
+    @apply bg-white/20 py-2 px-6 rounded-md border-white/50 border-2
+}
