--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 h2 {
-    @apply text-xl font-semibold my-8
+    @apply text-lg font-semibold my-8
+}
+
+p {
+    @apply text-sm
 }
 
 button {
-    @apply bg-white/20 py-2 px-6 rounded-md border-white/50 border-2
+    @apply bg-white/20 py-2 px-6 rounded-md border-white/50 border-2 text-sm
 }
